force-app/main/default/objects/Opportunity/fields/Abandoned_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Reason_Details__c</fullName>
    <description>Closed Lost/Abandoned Reason Details</description>
    <label>Closure Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>