force-app/main/default/objects/Opportunity/fields/Account_Change__c.field-meta.xml
<CustomField>
    <fullName>Account_Change__c</fullName>
    <description>Checkbox field to check if there is a change in Account</description>
    <defaultValue>false</defaultValue>
    <label>Account Change</label>
    <type>Checkbox</type>
</CustomField>