force-app/main/default/objects/Opportunity/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <description>Populates Address Line 3 from metadata based on Company Code of Opportunity </description>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>