force-app/main/default/objects/Opportunity/fields/Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD__c</fullName>
    <description>Returns Total Amount of Opportunity in USD</description>
    <formula>IF( ISBLANK( Conversion_Rate_On_Closed__c ) , Amount/ CURRENCYRATE( TEXT(CurrencyIsoCode) ) , 
Amount/Conversion_Rate_On_Closed__c)</formula>
    <label>Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>