force-app/main/default/objects/Opportunity/fields/Apttus_Proposal__Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>