force-app/main/default/objects/Opportunity/fields/Are_Products_Added_by_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Are_Products_Added_by_Channel_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are Products Added by Channel Partner</description>
    <inlineHelpText>System populated field indicating if products are added to opportunity by Channel Partner.</inlineHelpText>
    <label>Are Products Added by Channel Partner</label>
    <type>Checkbox</type>
</CustomField>