force-app/main/default/objects/Opportunity/fields/Billing_Country_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Sold_To__c</fullName>
    <description>Billing Country of Sold To Account</description>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country(Sold To)</label>
    <type>Text</type>
</CustomField>