force-app/main/default/objects/Opportunity/fields/Billing_Country_Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Ultimate_Consignee__c</fullName>
    <description>Billing Country of Ultimate Consignee</description>
    <formula>Ultimate_Consignee__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country(Ultimate Consignee)</label>
    <type>Text</type>
</CustomField>