force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>As part of 1298 for Budget information.</description>
    <inlineHelpText>Source and status of customer&apos;s budget associated with this opportunity. </inlineHelpText>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Budget</valueSetName>
    </valueSet>
</CustomField>