force-app/main/default/objects/Opportunity/fields/ByPass_Change_Record_Type_To_Standard__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Change_Record_Type_To_Standard__c</fullName>
    <description>ByPass Change Record Type To Standard</description>
    <defaultValue>false</defaultValue>
    <label>ByPass Change Record Type To Standard</label>
    <type>Checkbox</type>
</CustomField>