force-app/main/default/objects/Opportunity/fields/Check_First_Generated_Quote__c.field-meta.xml
<CustomField>
    <fullName>Check_First_Generated_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that will be marked as true when first Quote is generated.
Process builder</description>
    <label>Check First Generated Quote</label>
    <type>Checkbox</type>
</CustomField>