force-app/main/default/objects/Opportunity/fields/Clinical_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Type__c</fullName>
    <description>As part of DCP-1298 for Clinical Type Information.</description>
    <inlineHelpText>When applicable, indicates nature of entity's work within the clinical space; value defaulted from Ultimate Consignee, but can be opportunity-specific and adjusted if needed. Required throughout opportunity lifecycle.  Terms and regional use:  "Clinical" (All); "Non Clinical" (All); "Healthcare Prime" (AMR); "IVD Partner" (GC); "Platform Distributor" (GC).</inlineHelpText>
    <label>Clinical Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clinical_Type</valueSetName>
    </valueSet>
</CustomField>