force-app/main/default/objects/Opportunity/fields/Cloned_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-40572- The parent Opportunity from which the Opportunity is cloned from</description>
    <label>Cloned From Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Cloned From Opportunity)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>