force-app/main/default/objects/Opportunity/fields/Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Close_Quarter__c</fullName>
    <description>As part of DCP-1298, this field capture the quarter of the year from the Close Date field of Opportunity</description>
    <formula>CASE(MONTH(CloseDate),
    1, 1,
    2, 1,
    3, 1,
    4, 2,
    5, 2,
    6, 2,
    7, 3,
    8, 3,
    9, 3,
    10, 4,
    11, 4,
    12, 4,
    null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System calculated field indicating fiscal quarter associated with opportunity estimated Close Date; non-editable. </inlineHelpText>
    <label>Close Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>