force-app/main/default/objects/Opportunity/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>This field is used to determine based on 'Company Code Address' metadata</description>
    <label>Company Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>