force-app/main/default/objects/Opportunity/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Populates Company Name from metadata based on Company Code of Opportunity </description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>