force-app/main/default/objects/Opportunity/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>As part of US 1298 for user to select possible Competitor</description>
    <inlineHelpText>Primary competitor associated with opportunity.</inlineHelpText>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitor_Name</valueSetName>
    </valueSet>
</CustomField>