force-app/main/default/objects/Opportunity/fields/Competitor_Presence__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Presence__c</fullName>
    <description>Indicates if the opportunity has at least a competitor, no competition, or an unknown competitor.  Jira story # CMCM-5875</description>
    <inlineHelpText>If &apos;yes&apos; a C&amp;CT record should be added (use the Competitive Info tab). If there is no competitor or the competitor is unknown, please select the appropriate option.</inlineHelpText>
    <label>Competitor Context Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>