force-app/main/default/objects/Opportunity/fields/Compliance_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Last_Modified_Date__c</fullName>
    <label>Compliance Last Modified Date</label>
    <type>DateTime</type>
</CustomField>