force-app/main/default/objects/Opportunity/fields/Consortium__c.field-meta.xml
<CustomField>
    <fullName>Consortium__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Consortium name, if opportunity related to an active Consortium</description>
    <inlineHelpText>Consortium name, if opportunity related to an active Consortium.</inlineHelpText>
    <label>Consortium</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND (4 OR 5)) OR (3 AND 6) OR (7 AND 8) OR 9</booleanFilter>
        <errorMessage>This Consortium is no longer active and an associated Opportunity cannot be created.</errorMessage>
        <filterItems>
            <field>Consortium__c.Stage__c</field>
            <operation>equals</operation>
            <value>Early Engagement, Initial Sale, Re-Order</value>
        </filterItems>
        <filterItems>
            <field>$User.FirstName</field>
            <operation>equals</operation>
            <value>GIS</value>
        </filterItems>
        <filterItems>
            <field>$User.FirstName</field>
            <operation>equals</operation>
            <value>GIS Data Update</value>
        </filterItems>
        <filterItems>
            <field>$User.LastName</field>
            <operation>equals</operation>
            <value>Data Migration</value>
        </filterItems>
        <filterItems>
            <field>$User.LastName</field>
            <operation>equals</operation>
            <value>Illumina</value>
        </filterItems>
        <filterItems>
            <field>$User.LastName</field>
            <operation>equals</operation>
            <value>(Qtly/Weekly)</value>
        </filterItems>
        <filterItems>
            <field>$User.FirstName</field>
            <operation>equals</operation>
            <value>Automated</value>
        </filterItems>
        <filterItems>
            <field>$User.LastName</field>
            <operation>equals</operation>
            <value>Process</value>
        </filterItems>
        <filterItems>
            <field>$Source.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost, Closed Abandoned</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Consortium__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>