force-app/main/default/objects/Opportunity/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Text field to capture Contract Number</description>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>