force-app/main/default/objects/Opportunity/fields/Conversion_Rate_On_Closed__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate_On_Closed__c</fullName>
    <description>Conversion Rate on Closed Opportunity</description>
    <label>Conversion Rate On Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>