force-app/main/default/objects/Opportunity/fields/Created_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Created_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automated via Process Builder</description>
    <label>Created Proposal</label>
    <type>Checkbox</type>
</CustomField>