force-app/main/default/objects/Opportunity/fields/CRF_Section_1_Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>CRF_Section_1_Email_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To ensure that email is sent only once when the Is Customer Readiness Section 1 completed field is checked for the first time.</description>
    <label>CRF Section 1 Email Flag</label>
    <type>Checkbox</type>
</CustomField>