force-app/main/default/objects/Opportunity/fields/Current_Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Current_Ultimate_Consignee__c</fullName>
    <businessOwnerUser>aogundiran@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually populated field to store the Ultimate Consignee where the instrument is currently located for Relocation Opportunties.</description>
    <inlineHelpText>The Ultimate Consignee where the instrument is currently located.</inlineHelpText>
    <label>Current Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Current Ultimate Consignee)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>