force-app/main/default/objects/Opportunity/fields/Deal_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Status__c</fullName>
    <description>Indicates the status of Deal Registration.</description>
    <inlineHelpText>Indicates whether the deal registration is pending approval or has been accepted/rejected. Required to move opportunity into the next stage.</inlineHelpText>
    <label>Deal Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>