force-app/main/default/objects/Opportunity/fields/Direct_Sale_to_Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sale_to_Ultimate_Consignee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The ultimate consignee becomes the sold-to account for quoting and order purposes, if this field is checked.</description>
    <inlineHelpText>Used when Illumina will be selling directly to the Ultimate Consignee on behalf of the channel partner. Quote output will also be addressed to the Ultimate Consignee.</inlineHelpText>
    <label>Direct Sale to Ultimate Consignee</label>
    <type>Checkbox</type>
</CustomField>