force-app/main/default/objects/Opportunity/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Distributor Account</description>
    <inlineHelpText>Name of distributor required.  For standard indirect transactions, sold to and distributor should be the same except when affiliates are &quot;sold to&quot;.  For direct to UC transactions, distributor is the distributor who brokers the deal and earns the rebate.</inlineHelpText>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND (4 OR 5)) OR (3 AND 6)</booleanFilter>
        <filterItems>
            <field>Account.Account_Group__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <filterItems>
            <field>$User.FirstName</field>
            <operation>equals</operation>
            <value>GIS</value>
        </filterItems>
        <filterItems>
            <field>$User.FirstName</field>
            <operation>equals</operation>
            <value>GIS Data Update</value>
        </filterItems>
        <filterItems>
            <field>$User.LastName</field>
            <operation>equals</operation>
            <value>Data Migration</value>
        </filterItems>
        <filterItems>
            <field>$User.LastName</field>
            <operation>equals</operation>
            <value>Illumina</value>
        </filterItems>
        <filterItems>
            <field>$User.LastName</field>
            <operation>equals</operation>
            <value>(Qtly/Weekly)</value>
        </filterItems>
        <infoMessage>You can only associate distributor type of account to this field. Search results only display distributor  type of  accounts tied to this opportunity.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
    <relationshipName>Distributor_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>