force-app/main/default/objects/Opportunity/fields/ERP_Customer_ID_Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_ID_Ultimate_Consignee__c</fullName>
    <description>This field captures the ERP Customer ID of Ultimate Consignee Account. This field is used in Responsive (CQM) field mapping. Jira Story # CMCM-5762</description>
    <formula>Ultimate_Consignee__r.ERP_Customer_Id__c</formula>
    <inlineHelpText>ERP Customer ID of the Ultimate Consignee</inlineHelpText>
    <label>ERP Customer ID (Ultimate Consignee)</label>
    <type>Text</type>
</CustomField>