force-app/main/default/objects/Opportunity/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <description>As part of DCP-1298 for Actual Close Date.
Renamed as part of DCP-236.
Value Source: Updated by Workflow Rule Field Update</description>
    <inlineHelpText>User estimation of opportunity close date; actual close date upon closure reflected in &quot;Close Date&quot; field.</inlineHelpText>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>