force-app/main/default/objects/Opportunity/fields/Exclude_from_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integration populated field used to exclude the value of the opportunity from reports.</description>
    <inlineHelpText>Field used to store the value of  exclude from forecast on opportunity</inlineHelpText>
    <label>Exclude from Forecast</label>
    <type>Checkbox</type>
</CustomField>