force-app/main/default/objects/Opportunity/fields/First_Generated_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>First_Generated_Quote_Id__c</fullName>
    <description>Value Source : Value updated by Process builder</description>
    <label>First Generated Quote Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>