force-app/main/default/objects/Opportunity/fields/First_Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>First_Proposal_Id__c</fullName>
    <description>Automated via Process builder</description>
    <label>First Proposal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>