force-app/main/default/objects/Opportunity/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <description>This field is used by user to select close date of standing quote opportunity which would be the last date of the selected quarter.</description>
    <label>Fiscal Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Quarter</fullName>
            </value>
            <value>
                <fullName>Current Quarter + 1</fullName>
            </value>
            <value>
                <fullName>Current Quarter + 2</fullName>
            </value>
            <value>
                <fullName>Current Quarter + 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>