force-app/main/default/objects/Opportunity/fields/Footer_City__c.field-meta.xml
<CustomField>
    <fullName>Footer_City__c</fullName>
    <description>Populates Footer City from metadata based on Company Code of Opportunity </description>
    <label>Footer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>