force-app/main/default/objects/Opportunity/fields/Footer_Full_Street__c.field-meta.xml
<CustomField>
    <fullName>Footer_Full_Street__c</fullName>
    <description>Populates Footer Full Street from metadata based on Company Code of Opportunity </description>
    <label>Footer Full Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>