force-app/main/default/objects/Opportunity/fields/ICE_Opportunity_Market_Segments__c.field-meta.xml
<CustomField>
    <fullName>ICE_Opportunity_Market_Segments__c</fullName>
    <description>System generated market segment values based on opportunity market segment, stage, and product(s)</description>
    <inlineHelpText>System generated market segment values based on opportunity market segment, stage, and product(s). Values drive ICE prescriptive content to be shared with customer during opportunity lifecycle.</inlineHelpText>
    <label>ICE Opportunity Market Segments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>