force-app/main/default/objects/Opportunity/fields/ICE_Opportunity_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>ICE_Opportunity_Product_Lines__c</fullName>
    <description>System generated values based on product(s) added to opportunity</description>
    <defaultValue>&apos;-&apos;</defaultValue>
    <inlineHelpText>System generated values based on product(s) added to opportunity. Values drive ICE prescriptive content to be shared with customer during opportunity lifecycle.</inlineHelpText>
    <label>ICE Opportunity Product Lines</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>