force-app/main/default/objects/Opportunity/fields/Informatics_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Informatics_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Opportunity is an Informatics Opportunity</description>
    <label>Informatics Opportunity</label>
    <type>Checkbox</type>
</CustomField>