force-app/main/default/objects/Opportunity/fields/Is_Converted_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_From_Lead__c</fullName>
    <description>This field gets mapped from &apos;Is Converted From Lead&apos; field on lead when a lead is converted to opportunity.</description>
    <label>Is Converted From Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>