force-app/main/default/objects/Opportunity/fields/Is_Customer_Readiness_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Readiness_Form_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As part of DCP-28965 for checking if customer readiness is required.</description>
    <label>Is Customer Readiness Form Required</label>
    <type>Checkbox</type>
</CustomField>