force-app/main/default/objects/Opportunity/fields/Is_Customer_Readiness_Section_2_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Readiness_Section_2_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As part of DCP-1298, to check if section 2 of Customer Readiness Form is complete. 
Automation.</description>
    <inlineHelpText>Indicates if CRF Section 2 fields have all been completed; required in order to move to Negotiate &amp; Resolve stage if at least one instrument included in opportunity.</inlineHelpText>
    <label>Is Customer Readiness Section 2 Complete</label>
    <type>Checkbox</type>
</CustomField>