force-app/main/default/objects/Opportunity/fields/Is_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Channel Partner registered the opportunity or not.</description>
    <inlineHelpText>If checked, indicates that Channel Partner registered the opportunity.</inlineHelpText>
    <label>Is Deal Registration</label>
    <type>Checkbox</type>
</CustomField>