force-app/main/default/objects/Opportunity/fields/Is_In_Wrong_Territory__c.field-meta.xml
<CustomField>
    <fullName>Is_In_Wrong_Territory__c</fullName>
    <description>This field is set to true when the Territory2Id is different from the Ultimate Consignee&apos;s territory
This happens when an Account get&apos;s moved to a new territory as part of quarterly updates
This field is used in BatchUpdateOpportunityTerritory2Id to stamp the updated UC Territory in Territory2Id field</description>
    <formula>Ultimate_Consignee__r.Territory_Name__c &lt;&gt; Territory2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is In Wrong Territory</label>
    <type>Checkbox</type>
</CustomField>