force-app/main/default/objects/Opportunity/fields/Is_Quote_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Quote_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to capture whether quote has been created or not,as part of DCP-1298</description>
    <label>Is Quote Created</label>
    <type>Checkbox</type>
</CustomField>