force-app/main/default/objects/Opportunity/fields/Is_Quote_Stage_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Is_Quote_Stage_In_Review__c</fullName>
    <description>Field to check if Quote Stage is In Review</description>
    <defaultValue>false</defaultValue>
    <label>Is Quote Stage In Review</label>
    <type>Checkbox</type>
</CustomField>