force-app/main/default/objects/Opportunity/fields/Is_Record_Type_Switched_To_Standard__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Type_Switched_To_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field gets set when Opportunity Line Item satisfies the following condition - (Material Class = Instrument) AND (Service Product Type = Instrument OR Core) AND ((Material Class Type = System) OR (Auto Install Work Order = True))</description>
    <label>Is Record Type Switched To Standard</label>
    <type>Checkbox</type>
</CustomField>