force-app/main/default/objects/Opportunity/fields/Is_Tender_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Is_Tender_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be manually updated by users with &apos;SL_Opportunity_Edit_Is Tender Reviewed&apos;. This field will be used by China Sales team to manage their Tender process. Jira Story # CMCM-3832</description>
    <inlineHelpText>TAM must upload tender supporting doc using the &quot;Notes &amp; Attachments&quot; feature. GC Channel Ops or Comm Deals team may select the checkbox to confirm doc is reviewed.</inlineHelpText>
    <label>Is Tender Reviewed?</label>
    <type>Checkbox</type>
</CustomField>