force-app/main/default/objects/Opportunity/fields/Is_Updated_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_By_System__c</fullName>
    <description>Checkbox field to check if the record is updated by system</description>
    <defaultValue>false</defaultValue>
    <label>Is Updated By System</label>
    <type>Checkbox</type>
</CustomField>