force-app/main/default/objects/Opportunity/fields/Length_of_Contract_Years__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Contract_Years__c</fullName>
    <description>Length of Contract (Years) of an Illumina Lab Services Opportunity. Length of contract is only applicable when the Service Type is  NIPT or Oncology</description>
    <inlineHelpText>Length of Contract (Years) of an Illumina Lab Services Opportunity. Length of contract is only applicable when the Service Type is NIPT or Oncology</inlineHelpText>
    <label>Length of Contract (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>