force-app/main/default/objects/Opportunity/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>As part of DCP-1298 for the possible values of Segments of the market.</description>
    <inlineHelpText>Primary scientific application area(s) in which entity is focused; value defaulted from Ultimate Consignee, but can be opportunity-specific and adjusted, if needed. Required throughout opportunity lifecycle; drives commissions.</inlineHelpText>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Segment</valueSetName>
    </valueSet>
</CustomField>