force-app/main/default/objects/Opportunity/fields/Non_Compliance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliance_Reason__c</fullName>
    <label>Non-Compliance Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>