force-app/main/default/objects/Opportunity/fields/Opportunity_18_Char_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_18_Char_ID__c</fullName>
    <description>System generated char ID of Opportunity record as part of DCP-1298</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique opportunity ID used for reporting purposes.</inlineHelpText>
    <label>Opportunity 18 Char ID</label>
    <type>Text</type>
</CustomField>