force-app/main/default/objects/Opportunity/fields/Opportunity_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Forecast_Category__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Custom Forecast Category field created to allow edit to the standard Forecast Category field, which is editable only by Opp Owner. Jira Story # CMCM-8005</description>
    <inlineHelpText>Select the Forecast Category for this Opportunity.</inlineHelpText>
    <label>Opportunity Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Forecasted</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Commit-At Risk</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>